
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-33
2022-06-14 Mikhail Dubrovin
- src/GlobalUtils.py - add dict_of_object_metadata

Tag: V02-00-32
2022-06-09 Mikhail Dubrovin
	modified:   src/GlobalUtils.py - use logger.debug instead of print
	modified:   src/UtilsPanelAlias.py - extend alias records with kwargs values

Tag: V02-00-31
2022-05-09 Mikhail Dubrovin
modified:
- src/UtilsPanelAlias.py - code cleaning
- src/GenericCalibPars.py - return default epix100a gain fron 0.06 keV/ADU to 1.
  - test: python Detector/examples/test-issues-2022.py 5

Tag: V02-00-30
2022-04-26 Mikhail Dubrovin
modified:
   app/dcs - add repoman.save_record_at_start, save files in ctype-dependent format
   src/DCMethods.py - in get_constants search for constants in experiment/local calib then in global repo
   src/DCRange.py - code cleaning
   src/DCStore.py - code cleaning
   src/DCType.py - code cleaning, simplify search for range end
   src/DCUtils.py - code cleaning - add os.umask(umask) in create_directory
   src/DCVersion.py - code cleaning

Tag: V02-00-29
2022-04-20 Mikhail Dubrovin
- src/GenericCalibPars.py - set default epix100a gain 0.06 keV/ADU since evt time 1650524400 sec for 2022-04-21 00:00

Tag: V02-00-28
2022-03-22 Mikhail Dubrovin
   src/CalibPars.py - code cleaning
   src/GeometryAccess.py - add method info_list_of_geos
   src/GeometryObject.py - add metho info_geo
   src/GlobalUtils.py - Add list_of_det_names_lower, dic_det_name_to_type,
	dic_det_tname_lower_to_calib_group, log_rec_at_start

Tag: V02-00-27
2022-02-24 Mikhail Dubrovin
- GlobalUtils.py - replace len(a.shape) with a.ndim
- CalibParsBaseCSPad2x2V1.py - code cleaning
- CalibParsBaseEpix100aV1.py - code cleaning
- CalibParsBaseEpix10kaV1.py - code cleaning
- Use universal parameters in