@@ -9,6 +9,10 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-34
+2022-06-21 Mikhail Dubrovin
+- src/DCMethods.py - hide missing file warnings under verb (Vincent & Silke request)
+
 Tag: V02-00-33
 2022-06-14 Mikhail Dubrovin
 - src/GlobalUtils.py - add dict_of_object_metadata
